Simplify transcription: faster-whisper, no auth, streaming output
- Switch from NeMo to faster-whisper for transcription (simpler deps)
- Remove speaker diarization (pyannote required HF auth)
- Remove sample_rate config (hardcoded to 16kHz)
- Stream transcript to file (append instead of rewrite)
- Reduce batch interval from 10s to 5s for faster feedback
- Disable VAD filter to capture ambient/speaker audio
- Fix Electron build: CJS format, external electron, process.cwd() paths

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "bun run build && electron .",
     "build": "bun run build:electron && bun run build:renderer",
-    "build:electron": "bun build electron/main.ts electron/preload.ts --outdir dist/electron --target node",
+    "build:electron": "bun build --target node --format cjs --packages=external electron/main.ts electron/preload.ts --outdir dist/electron",
     "build:renderer": "mkdir -p dist/renderer && cp src/renderer/*.html dist/renderer/",
     "start": "electron .",
     "package": "electron-builder",
